약속 생성 기능 추가 및 컨트롤러 코드 개선